working on lit-review

--- a/thesis/content/bibliography.bib
+++ b/thesis/content/bibliography.bib
@@ -239,3 +239,70 @@
   year={1995},
   publisher={Solo Zone}
 }
+@article{forgas1995mood,
+  title={Mood and judgment: the affect infusion model (AIM).},
+  author={Forgas, Joseph P},
+  journal={Psychological bulletin},
+  volume={117},
+  number={1},
+  pages={39},
+  year={1995},
+  publisher={American Psychological Association}
+}
+@article{cannon1927james,
+  title={The James-Lange theory of emotions: a critical examination and an alternative theory.},
+  author={Cannon, Walter B},
+  journal={The American Journal of Psychology},
+  year={1927},
+  publisher={Univ of Illinois Press}
+}
+@book{paiva2007affective,
+  title={Affective Computing and Intelligent Interaction: Second International Conference, ACII 2007, Lisbon, Portugal, September 12-14, 2007, Proceedings},
+  author={Paiva, Ana and Prada, Rui and Picard, Rosalind W},
+  volume={4738},
+  year={2007},
+  publisher={Springer}
+}
+@article{schachter1964interaction,
+  title={The interaction of cognitive and physiological determinants of emotional state},
+  author={Schachter, Stanley},
+  journal={Advances in experimental social psychology},
+  volume={1},
+  pages={49--80},
+  year={1964}
+}
+@article{zimmermann2006extending,
+  title={Extending usability: putting affect into the user-experience},
+  author={Zimmermann, P and Gomez, Patrick and Danuser, Brigitta and Sch{\"a}r, S},
+  journal={Proceedings of NordiCHI'06},
+  pages={27--32},
+  year={2006}
+}
+@article{russell2003core,
+  title={Core affect and the psychological construction of emotion.},
+  author={Russell, James A},
+  journal={Psychological review},
+  volume={110},
+  number={1},
+  pages={145},
+  year={2003},
+  publisher={American Psychological Association}
+}
+@book{csikszentmihalyi1997finding,
+  title={Finding flow: The psychology of engagement with everyday life},
+  author={Csikszentmihalyi, Mihaly},
+  year={1997},
+  publisher={Basic Books}
+}
+@book{stern2001psychophysiological,
+  title={Psychophysiological recording},
+  author={Stern, Robert Morris and Ray, William J and Quigley, Karen S},
+  year={2001},
+  publisher={Oxford University Press}
+}
+@book{frijda1986emotions,
+  title={The emotions},
+  author={Frijda, Nico H},
+  year={1986},
+  publisher={Cambridge University Press}
+}
