--- a/thesis/content/abbreviations.tex
+++ b/thesis/content/abbreviations.tex
@@ -1,6 +1,7 @@
 \abbrev{TT}   {Thought Technology}
 \abbrev{GSR}  {Galvanic Skin Response}
 \abbrev{EMG}  {Electromyography}
+\abbrev{EKG}  {Electrocardiography}
 \abbrev{HR}   {Heart Rate}
 \abbrev{BVP}  {Blood Volume Pulse}
 \abbrev{EDA}  {Electrodermal Activity}
@@ -9,4 +10,3 @@
 \abbrev{NPC}  {Non-Player Character}
 \abbrev{Mod}  {Modification}
 \abbrev{CSV}  {Camma Separated Values}
-
